pkgdata_prog_libdir = $(pkgdatadir)/prog_lib

dist_pkgdata_prog_lib_DATA =\
	CPT12axAll.progp \
	DataCalcSample.prog \
	LeabraEpoch.prog \
	LeabraTrain.prog \
	SplitImageList.prog \
	LeabraEpochGpData.prog \
	LeabraTrial.prog \
	LeabraAll_Std.progp \
	LeabraEpochMonitor.prog \
	LeabraTrialMonitor.prog \
	ApplyInputs.prog \
	LeabraBatch.prog \
	ApplyInputsImage.prog \
	LeabraCycle.prog \
	LeabraSettle.prog \
	ReadImages.prog \
	LeabraTrainBatchSeedList.prog \
	LeabraTrainBatchSeedNThr.prog \
	MultiInputData.prog \
	BpAll_Std.progp \
	BpBatch.prog \
	BpEpoch.prog \
	BpEpochMonitor.prog \
	BpTestAll.progp \
	BpTrain.prog \
	BpTrial.prog \
	BpTrialMonitor.prog
