pkgdata_prog_libdir = $(pkgdatadir)/prog_lib

dist_pkgdata_prog_lib_DATA =\
	ApplyInputs.prog \
	ApplyInputsImage.prog \
	BpAll_Std.progp \
	BpBatch.prog \
	BpEpoch.prog \
	BpEpochMonitor.prog \
	BpTestAll.progp \
	BpTrain.prog \
	BpTrial.prog \
	BpTrialMonitor.prog \
	CPT12axAll.progp \
	CsAll_Std.progp \
	CsBatch.prog \
	CsCycle.prog \
	CsEpoch.prog \
	CsEpochMonitor.prog \
	CsSettle.prog \
	CsTrain.prog \
	CsTrial.prog \
	CsTrialMonitor.prog \
	DataCalcSample.prog \
	LeabraAll_Std.progp \
	LeabraBatch.prog \
	LeabraBatch_pb.prog \
	LeabraCycle.prog \
	LeabraEpoch.prog \
	LeabraEpochGpData.prog \
	LeabraEpochMonitor.prog \
	LeabraSettle.prog \
	LeabraStartup.prog \
	LeabraStartup_pb.prog \
	LeabraTrain.prog \
	LeabraTrainBatchSeedList.prog \
	LeabraTrainBatchSeedNThr.prog \
	LeabraTrial.prog \
	LeabraTrialMonitor.prog \
	MultiInputData.prog \
	ReadImages.prog \
	SaveWeights.prog \
	SaveWeightsSpecs.prog \
	SoAll_Std.progp \
	SoBatch.prog \
	SoEpoch.prog \
	SoEpochMonitor.prog \
	SoTrain.prog \
	SoTrial.prog \
	SoTrialMonitor.prog \
	SplitImageList.prog
