########### test install files ###############

FILE(GLOB PROJ_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.proj")
FILE(GLOB DTBL_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.dtbl")
FILE(GLOB CSS_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.css")
FILE(GLOB JPG_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.jpg")

install(FILES ${PROJ_FILES} ${DTBL_FILES} ${CSS_FILES} ${JPG_FILES}
    DESTINATION ${EMERGENT_SHARE_DEST}/test
)
