pkgdata_testdir = $(pkgdatadir)/test

dist_pkgdata_test_DATA =\
	12ax4s_demo.proj \
	SimpleLines5x5.dtbl \
	hv.v4good_05_20_06_v4_cvt.proj \
	leabra_startup.css \
	toaster.jpg \
	12ax4s_demo_v4.proj \
	giraffe.jpg \
	imgproc_test.proj \
	pdp_v3_cvt \
	xor.proj \
	12ax4s_demo_v4_cvt.proj \
	hv.v4good_05_20_06.proj \
	leabra_ra.proj \
	ra3_2.proj \
	xor_old.proj \
	hv.v4good_05_20_06_v4.proj \
	leabra_ra.proj.bkup \
	ra3_2_v4.proj
