pkgdata_testdir = $(pkgdatadir)/test

dist_pkgdata_test_DATA =\
	12ax4s_demo.proj \
	SimpleLines5x5.dtbl \
	random_assoc_5x5_25.dtbl \
	hv.v4good_05_20_06_v4_cvt.proj \
	leabra_startup.css \
	toaster.jpg \
	giraffe.jpg \
	imgproc_test.proj \
	xor.proj \
	12ax4s_demo_v4_cvt.proj \
	hv.v4good_05_20_06.proj \
	leabra_ra.proj \
	ra3_2.proj \
	xor_old.proj
