pkgdata_testdir = $(pkgdatadir)/test

dist_pkgdata_test_DATA =\
	12ax4s_demo.proj \
	SimpleLines5x5.dtbl \
	random_assoc_5x5_25.dtbl \
	leabra_startup.css \
	toaster.jpg \
	giraffe.jpg \
	imgproc_test.proj \
	bp_xor.proj \
	12ax4s_demo_v4.proj \
	leabra_ra.proj \
	ra3_2.proj \
	model_and_task_v4.proj \
	simple_vis_search.proj
