########### demo/actr install files ###############

FILE(GLOB PROJ_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.proj")
FILE(GLOB DTBL_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.dtbl")
FILE(GLOB NET_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.net")
FILE(GLOB LISP_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.lisp")
FILE(GLOB ACTR_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.actr")

install(FILES ${PROJ_FILES} ${DTBL_FILES} ${NET_FILES} ${LISP_FILES} ${ACTR_FILES}
    DESTINATION ${EMERGENT_SHARE_DEST}/demo/actr
)
