########### demo/audioproc install files ###############

FILE(GLOB PROJ_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.proj")
FILE(GLOB DTBL_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.dtbl")
FILE(GLOB NET_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.net")
FILE(GLOB WAV_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.wav")

install(FILES ${PROJ_FILES} ${DTBL_FILES} ${NET_FILES} ${WAV_FILES}
    DESTINATION ${EMERGENT_SHARE_DEST}/demo/audioproc
)
