########### demo/programs install files ###############

FILE(GLOB PROJ_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.proj")
FILE(GLOB DTBL_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.dtbl")
FILE(GLOB NET_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.net")
FILE(GLOB CSS_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.css")

install(FILES ${PROJ_FILES} ${DTBL_FILES} ${NET_FILES} ${CSS_FILES}
    DESTINATION ${EMERGENT_SHARE_DEST}/demo/programs
)
