########### demo/virt_env install files ##############

FILE(GLOB PROJ_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.proj")
FILE(GLOB IV_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.iv")
FILE(GLOB PNG_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.png")
FILE(GLOB TIF_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.tif")
FILE(GLOB GZ_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.gz")
FILE(GLOB SVG_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.svg")

install(FILES ${PROJ_FILES} ${IV_FILES} ${PNG_FILES} ${TIF_FILES} ${GZ_FILES} ${SVG_FILES}
    DESTINATION ${EMERGENT_SHARE_DEST}/demo/virt_env
)
